<resources>
    <string name="app_name">TH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_bluetooth">Conexión Bluetooth</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="aloha_hello_world">Aloha hello world</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="chose_camera">You chose Camera Import</string>
    <string name="chose_gallery">You chose the Gallery</string>
    <string name="chose_slideshow">You chose the Slideshow</string>
    <string name="chose_tools">"You chose Tools "</string>
    <string name="chose_share">You chose Share</string>
    <string name="chose_send">You chose Send</string>
    <string name="tools"><![CDATA[<Tools>]]></string>

    <!--    BluetoothActivity-->
    <string name="JustificacionPermiso">El permiso es necesario para utilizar el bluetooth.</string>
    <string name="dispositivos_conocidos">DISPOSITIVOS CONOCIDOS</string>
    <string name="dispositivos_nuevos">DISPOSITIVOS NUEVOS</string>
    <string name="boton_inicio">BÚSQUEDA DE DISPOSITIVOS</string>
    <string name="Boton_detener">DETENER BÚSQUEDA</string>
    <string name="DispNoTieneBluetooth">El dispositivo no soporta Bluetooth</string>
    <string name="BluetoothActiv">El Bluetooth esta activado</string>
    <string name="BusquedaAcabada">Búsqueda finalizada</string>
    <string name="NoDispCon">No hay dispositivos conocidos</string>
    <string name="NoDispNuevo">No hay dispositivos nuevos</string>
    <string name="RecibirDatos">Empezar a recibir</string>
    <string name="SetConfig">Confirmar</string>
    <string name="finish_activity">No se encuentran dispositivos Bluetooth</string>
    <string name="sincronizar_datos">Sincronizar Datos</string>


<!--Lista de sensores -->
    <string name="representanodo">Imagen que representa nodo</string>
    <string name="nodo">Nodo</string>
    <string name="registro">Registro</string>
    <string name="mostrar_sensores">Mostrar sensores</string>
    <string name="lecturanodo">"Leyendo datos del nodo "</string>

<!--    Detalle Sensor -->

    <string name="DatoH">- - %</string>
    <string name="DatoT">- - ºC</string>
    <string name="selecciontemperatura">"Leyendo la temperatura del nodo "</string>
    <string name="seleccionhumedad">Leyendo humedad del nodo</string>
    <string name="img_humedad">Imagen humedad</string>
    <string name="img_temperatura">Imagen temperatura</string>
    <string name="temperatura">Temperatura:</string>
    <string name="humedad">Humedad:</string>
    <string name="fecha">Fecha:</string>
    <string name="DatoF">--/--/--</string>
    <string name="hora">Hora:</string>
    <string name="DatoHora">--:--:--</string>
    <string name="sin_datos">Esperando cargar datos...</string>
    <string name="datos_sincronizados">DATOS SINCRONIZADOS</string>
    <string name="sync">Sincronizar datos</string>
    <string name="componente_1_logo">componente 1 logo</string>
    <string name="componente_2_logo">componente 2 logo</string>
    <string name="componente_3_logo">componente 3 logo</string>

    <string name="registro_tempyhum">   Registro: 32ºC 40%</string>
    <string name="fechayhora">20/10/20 13:26:06</string>
    <string name="nombre_nodo">   Nodo</string>
    <string name="representanodo">representanodo</string>
</resources>