<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/sensor"
            style="@style/sensor_title" />

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_nodo"
            android:contentDescription="@string/representanodo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_toEndOf="@+id/imgPhoto"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/imgPhoto">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/nombre_nodo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:text="@string/registro_tempyhum"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fechayhora"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>