<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/deg_dra_bar"
    tools:context=".InicioActivity">

    <Button
        android:id="@+id/IdSincronizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/deg_dra_background"
        android:drawableStart="@drawable/ic_bluetooth"
        android:drawableLeft="@drawable/ic_bluetooth"
        android:gravity="center_vertical"
        android:onClick="SincronizarDatos"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/sincronizar_datos"
        app:layout_constraintBottom_toTopOf="@+id/lineaGuiaHorizontal50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lineaGuiaVertical50" />

    <Button
        android:id="@+id/IdSeleccionNodos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/deg_dra_background"
        android:drawableStart="@drawable/ic_sensorlist"
        android:drawableLeft="@drawable/ic_sensorlist"
        android:onClick="MostrarSensores"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/mostrar_sensores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lineaGuiaVertical50"
        app:layout_constraintTop_toTopOf="@+id/lineaGuiaHorizontal50" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lineaGuiaVertical50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgHumedad"
            android:layout_width="106dp"
            android:layout_height="88dp"
            android:layout_marginTop="156dp"
            android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp"
            android:contentDescription="@string/componente_1_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/humedad" />

        <ImageView
            android:id="@+id/imgTemperatura"
            android:layout_width="163dp"
            android:layout_height="144dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/componente_2_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/temperature" />

        <ImageView
            android:id="@+id/imgtelesilla"
            android:layout_width="82dp"
            android:layout_height="65dp"
            android:layout_marginStart="104dp"
            android:layout_marginLeft="104dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/componente_3_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/telesilla" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineaGuiaVertical50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineaGuiaHorizontal50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>