<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/deg_dra_menu"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="64dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BluetoothActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/disp_conocidos_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_weight="1"
        android:background="@drawable/deg_dra_background"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/dispositivos_conocidos"
        android:textColor="#fff"
        android:visibility="gone" />


    <ListView
        android:id="@+id/disp_conocidos_lista"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:headerDividersEnabled="false" />

    <TextView
        android:id="@+id/disp_nuevos_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_weight="1"
        android:background="@drawable/deg_dra_background"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/dispositivos_nuevos"
        android:textColor="#FFF"
        android:visibility="gone" />

    <ListView
        android:id="@+id/disp_nuevos_lista"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2" />

    <Button
        android:id="@+id/boton_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="BuscarDispositivos"
        android:text="@string/boton_inicio" />


</LinearLayout>