<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    tools:context=".MainActivity">
<!--    Sustituir por tools:context=".DetalleSensor", en las ImagenButton activar onclick, estan ignoradas-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/temperatura"
            android:layout_width="54dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_temperatura"
            android:onClick="TemperaturaNodo"
            app:layout_constraintBottom_toBottomOf="@id/entradatemperatura"
            app:layout_constraintEnd_toStartOf="@+id/entradatemperatura"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/temperaturacolor"
            android:layout_marginLeft="16dp"
            tools:ignore="OnClick" />

        <ImageView
            android:id="@+id/humedad"
            android:layout_width="58dp"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_humedad"
            android:onClick="HumedadNodo"
            app:layout_constraintBottom_toBottomOf="@id/entradahumedad"
            app:layout_constraintEnd_toStartOf="@+id/entradahumedad"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/entradatemperatura"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/humedadcolor"
            android:layout_marginLeft="16dp"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/entradahumedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/DatoH"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/entradatemperatura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/humedad" />

        <TextView
            android:id="@+id/entradatemperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/DatoT"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/humedad"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/temperatura"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp" />


        <!--    Graficos de la tabla -->
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperatura" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineChart" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/listadatos"
            app:layout_constraintTop_toBottomOf="@+id/lineChart1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>